css/styles.css
/* ... */
.nav-list,
.address {
  display: none;
}

.logo {
  color: var(--IRIS);

  font-family: "Raleway", sans-serif;
  font-weight: 700;
  font-size: 18px;
  line-height: 1.17;
  letter-spacing: 0.54px;
  text-transform: uppercase;
}

.header-logo {
  padding: 16px 0;
  display: block;
}

.header-logo .logo-part {
  color: var(--NAVY-BLUE);
}

.burger-btn {
  padding: 0;

  border: none;
  background-color: transparent;
}

.burger-icon {
  display: block;
  fill: var(--COMMON-BLACK);
  cursor: pointer;
}

/* Mobile-menu */
.mobile-menu {
  position: fixed;
  top: 0;
  left: 0;

  width: 100%;
  height: 100%;
  padding: 72px 16px 40px;

  background-color: var(--WHITE);

  display: flex;
  flex-direction: column;

  opacity: 0;
  visibility: hidden;
  pointer-events: none;

  transition:
    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.mobile-menu.is-open {
  opacity: 1;
  visibility: visible;
  pointer-events: auto;
}
/* nav */
.mobile-menu-nav {
  margin-bottom: auto;
}

.mobile-nav-item:not(:last-child) {
  margin-bottom: 40px;
}

.mobile-nav-link {
  color: var(--NAVY-BLUE);

  font-family: Roboto;
  font-size: 36px;
  font-style: normal;
  font-weight: 700;
  line-height: 1.11em;
  letter-spacing: 0.02em;

  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
/* addr */
.mobile-menu-addr {
  margin-bottom: 48px;
}

.mobile-addr-item:not(:last-child) {
  margin-bottom: 24px;
}

.mobile-addr-link {
  color: var(--SLATE);

  font-family: Roboto;
  font-size: 20px;
  font-style: normal;
  font-weight: 500;
  line-height: 1.2em;
  letter-spacing: 0.02em;

  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.mobile-nav-link:hover,
.mobile-nav-link:focus,
.mobile-addr-link:hover,
.mobile-addr-link:focus,
.mobile-nav-link.current {
  color: var(--OCEAN);
}

.mobile-menu-nav.current,
.mobile-addr-link.current {
  color: var(--OCEAN);
}
/* icon */
.mobile-menu-icon {
  display: flex;
  justify-content: center;
  gap: 40px;

  padding: 0;
  margin: 0;
}

@media screen and (min-width: 768px) {
  .mobile-menu {
    display: none;
  }
}

@media screen and (min-width: 768px) {
  .burger-btn {
    display: none;
  }

  .header-nav {
    display: flex;
    align-items: center;
  }

  .nav-list {
    display: flex;
    align-items: center;
    gap: 40px;
  }

  .header-logo {
    padding: 24px 0;
    margin-right: 120px;
  }

  .nav-link {
    position: relative;
    display: block;
    padding: 24px 0;

    color: var(--NAVY-BLUE);
    font-size: 16px;
    letter-spacing: 0.02em;
    line-height: 1.5;
    font-weight: 500;

    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }

  .nav-link::after {
    content: "";

    position: absolute;
    left: 0;
    bottom: -1px;

    border-radius: 2px;
    width: 100%;
    height: 4px;

    background-color: var(--OCEAN);
    opacity: 0;
    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }

  .nav-link:hover::after,
  .nav-link:focus::after,
  .nav-link.current::after {
    opacity: 1;
  }

  .address {
    font-style: normal;
    display: block;
  }

  .addr-list {
    display: flex;
    flex-direction: column;
    gap: 12px;
  }

  .addr-link {
    display: block;
    font-size: 12px;
    line-height: 1.17;
    letter-spacing: 0.04em;
    color: var(--SLATE);

    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }

  .nav-link:hover,
  .nav-link:focus,
  .addr-link:hover,
  .addr-link:focus,
  .nav-link.current {
    color: var(--OCEAN);
  }
}

@media screen and (min-width: 1158px) {
  .header-logo {
    margin-right: 76px;
  }

  .addr-list {
    flex-direction: row;
    align-items: center;
    gap: 40px;
  }

  .addr-link {
    padding: 24px 0;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
  }
}

/* Main */

/* Hero Section */

.hero-section {
  margin: 0 auto;
  padding: 72px 0;

  background-image:
    linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
    url("../images/people-office_mob@1x.jpg");

  background-color: var(--NAVY-BLUE);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

.hero-section .container {
  max-width: 320px;
  margin: 0 auto;

  display: flex;
  flex-direction: column;
  gap: 72px;
}

.hero-title {
  color: var(--WHITE);
  text-align: center;

  font-size: 36px;
  line-height: 1.07;
  letter-spacing: 0.02em;
  font-weight: 700;

  max-width: 216px;
  margin: 0 auto;
}

.hero-button {
  color: var(--WHITE);
  background-color: var(--IRIS);
  cursor: pointer;
  letter-spacing: 0.04em;
  line-height: 1.5;
  font-size: 16px;
  font-weight: 500;
  font-family: "Roboto", sans-serif;

  display: block;
  min-width: 169px;
  height: 56px;
  border: none;
  border-radius: 4px;
  margin: 0 auto;

  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.hero-button:hover,
.hero-button:focus {
  background-color: var(--OCEAN);
}

@media (min-resolution: 192dpi), (min-resolution: 2dppx) {
  .hero-section {
    background-image:
      linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
      url("../images/people-office_mob@2x.jpg");
  }
}

@media screen and (min-width: 768px) {
  .hero-section {
    padding: 112px 0;

    background-image:
      linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
      url("../images/people-office_tab@1x.jpg");
  }

  .hero-section .container {
    max-width: 768px;
    gap: 36px;
  }

  .hero-title {
    font-size: 56px;
    max-width: 496px;
  }

  @media (min-resolution: 192dpi), (min-resolution: 2dppx) {
    .hero-section {
      background-image:
        linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
        url("../images/people-office_tab@2x.jpg");
    }
  }
}
/* ... */

